# platform.prebuilts.build-tools

./: Android.bp  BUILD.bazel  OWNERS  build-prebuilts.sh  manifest.xml  prebuilt_tool.bzl  update-prebuilts.sh
common/py3-headers/android/bionic/pyconfig/: pyconfig.h
common/py3-headers/android/darwin/pyconfig/: pyconfig.h
common/py3-headers/android/linux_arm64/pyconfig/: pyconfig.h
common/py3-headers/android/linux_x86_64/pyconfig/: pyconfig.h
darwin-x86/lib64/: libbase.dylib  libc++.dylib  libicuuc-host.dylib  liblog.dylib  libsqlite.dylib  libz-host.dylib  libziparchive.dylib
path/linux-arm64/: awk  bc  bzcat  python3  test  xzcat  zipinfo
