load("@bazel_tools//tools/python:toolchain.bzl", "py_runtime_pair")
load(":prebuilt_tool.bzl", "prebuilt_tool")

# Note: Do not rely on public visibility of files without exporing it below.
# This statement will be removed in the future.
package(default_visibility = ["//visibility:public"])

filegroup(
    name = "linux-x86",
    srcs = glob([
        "common/**",
        "linux-x86/bin/*",
        "linux-x86/lib64/*",
        "path/linux-x86/*",
    ]),
    visibility = ["//visibility:public"],
)

py_runtime(
    name = "python2",
    files = ["linux-x86/bin/py2-cmd"],
    interpreter = "linux-x86/bin/py2-cmd",
    python_version = "PY2",
    visibility = ["//visibility:public"],
)

py_runtime(
    name = "python3",
    files = ["linux-x86/bin/py3-cmd"],
    interpreter = "linux-x86/bin/py3-cmd",
    python_version = "PY3",
    visibility = ["//visibility:public"],
)

py_runtime_pair(
    name = "py_runtime_pair",
    py2_runtime = ":python2",
    py3_runtime = ":python3",
    visibility = ["//visibility:public"],
)

toolchain(
    name = "py_toolchain",
    toolchain = ":py_runtime_pair",
    toolchain_type = "@bazel_tools//tools/python:toolchain_type",
    visibility = ["//visibility:public"],
)

prebuilt_tool(
    name = "bison",
    visibility = ["//visibility:public"],
)

prebuilt_tool(
    name = "flex",
    visibility = ["//visibility:public"],
)

prebuilt_tool(
    name = "m4",
    visibility = ["//visibility:public"],
)

prebuilt_tool(
    name = "soong_zip",
    visibility = ["//visibility:public"],
)

# Additional runfiles required by bison
filegroup(
    name = "bison.runfiles",
    srcs = glob([
        "common/bison/**",
    ]),
    visibility = ["//visibility:public"],
)

# Point to the directory so variables can know where to set BISON_PKGDATADIR to
filegroup(
    name = "bison.runfiles_dir",
    srcs = ["common/bison"],
    visibility = ["//visibility:public"],
)

exports_files([
    # keep sorted
    "linux-x86/bin/bison",
    "linux-x86/bin/bzip2",
    "linux-x86/bin/flex",
    "linux-x86/bin/m4",
    "linux-x86/bin/make",
    "linux-x86/bin/openssl",
    "linux-x86/bin/runextractor",
    "linux-x86/bin/toybox",
    "linux-x86/bin/xz",
    "linux-x86/bin/ziptool",
    "path/linux-x86/awk",
    "path/linux-x86/bc",
])
