load("@bazel_tools//tools/python:toolchain.bzl", "py_runtime_pair")
load(":prebuilt_tool.bzl", "prebuilt_tool")

# Note: Do not rely on public visibility of files without exporing it below.
# This statement will be removed in the future.
package(default_visibility = ["//visibility:public"])

filegroup(
    name = "linux-x86",
    srcs = glob([
        "common/**",
        "linux-x86/bin/*",
        "linux-x86/lib64/*",
        "path/linux-x86/*",
    ]),
    visibility = ["//visibility:public"],
)

py_runtime(
    name = "python2",
    files = ["linux-x86/bin/py2-cmd"],
    interpreter = "linux-x86/bin/py2-cmd",
    python_version = "PY2",
    visibility = ["//visibility:public"],
)

py_runtime(
    name = "python3",
    files = ["linux-x86/bin/py3-cmd"],
    interpreter = "linux-x86/bin/py3-cmd",
    python_version = "PY3",
    visibility = ["//visibility:public"],
)

py_runtime_pair(
    name = "py_runtime_pair",
    py2_runtime = ":python2",
    py3_runtime = ":python3",
    visibility = ["//visibility:public"],
)

toolchain(
    name = "py_toolchain",
    toolchain = ":py_runtime_pair",
    toolchain_type = "@bazel_tools//tools/python:toolchain_type",
    visibility = ["//visibility:public"],
)

prebuilt_tool(
    name = "awk",
    actual = "one-true-awk",
    visibility = ["//visibility:public"],
)

prebuilt_tool(
    name = "bc",
    actual = "gavinhoward-bc",
    visibility = ["//visibility:public"],
)

prebuilt_tool(
    name = "bison",
    visibility = ["//visibility:public"],
)

prebuilt_tool(
    name = "bzip2",
    visibility = ["//visibility:public"],
)

prebuilt_tool(
    name = "flex",
    visibility = ["//visibility:public"],
)

prebuilt_tool(
    name = "m4",
    visibility = ["//visibility:public"],
)

prebuilt_tool(
    name = "make",
    visibility = ["//visibility:public"],
)

prebuilt_tool(
    name = "openssl",
    visibility = ["//visibility:public"],
)

prebuilt_tool(
    name = "runextractor",
    visibility = ["//visibility:public"],
)

prebuilt_tool(
    name = "soong_zip",
    visibility = ["//visibility:public"],
)

prebuilt_tool(
    name = "toybox",
    visibility = ["//visibility:public"],
)

prebuilt_tool(
    name = "xz",
    visibility = ["//visibility:public"],
)

prebuilt_tool(
    name = "ziptool",
    visibility = ["//visibility:public"],
)

# Additional runfiles required by bison
filegroup(
    name = "bison.runfiles",
    srcs = glob([
        "common/bison/**",
    ]),
    visibility = ["//visibility:public"],
)

# Point to the directory so variables can know where to set BISON_PKGDATADIR to
filegroup(
    name = "bison.runfiles_dir",
    srcs = ["common/bison"],
    visibility = ["//visibility:public"],
)
